<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/purple_transparent"
    android:gravity="center"
    >
<!--    android:visibility="gone"-->


    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        style="@style/TituloGuia"
        />

    <TextView
        android:id="@+id/guiaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_first"
        android:textColor="@color/white"
        style="@style/TextoTitulo"
        android:paddingBottom="10dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/spyro_logo"
        android:paddingBottom="15dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_second"
        android:paddingBottom="20dp"
        style="@style/TextoNormal"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_there"
        android:paddingBottom="20dp"
        style="@style/TextoNormal"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_four"
        android:paddingBottom="20dp"
        style="@style/TextoNormal"
        />
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="263dp"
        android:layout_height="163dp"
        app:srcCompat="@drawable/gems" />

    <TextView
        android:id="@+id/button_comenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Begin"
        android:textAlignment="center"
        android:layout_gravity="center"
        style="@style/TextoTitulo"
        android:clickable="true"
        android:focusable="true"
/>
</FrameLayout>

    <TextView
        android:id="@+id/saltar_guia_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump_guide"
        android:clickable="true"
        android:textAlignment="textEnd"
        style="@style/TextoNormal"
        />


</LinearLayout>